# lanraragi-api

./: .gitignore  Makefile  README.md  demo.py  pyproject.toml  requirements.txt  setup.py
.github/: dependabot.yml
.github/actions/basic-setup/: action.yml
.github/actions/python-uv-setup/: action.yml
.github/workflows/: ci.yml  release-old.yml  release.yml
api/: README.md  openapi.yaml
lanraragi_api/: Config.py  __init__.py  lanraragi.py
lanraragi_api/api/: __init__.py  archive.py  category.py  database.py  minion.py  other.py  search.py  shinobu.py
lanraragi_api/base/: __init__.py  archive.py  base.py  category.py  database.py  minion.py  misc.py  other.py  search.py  shinobu.py
lanraragi_api/common/: entity.py
lanraragi_api/enhanced/: script.py  server_side.py
src/lanraragi_api/: __init__.py  lanraragi.py
src/lanraragi_api/base/: __init__.py  base.py  category.py  database.py  misc.py  search.py  shinobu.py  tankoubon.py
src/lanraragi_api/enhanced/: script.py
