[project]
name = "lanraragi_api"
version = "0.9.70.0"
description = "A Python library for LANraragi API."
readme = "README.md"
authors = [{ name = "Gustav", email = "gustaavv.git@yahoo.com" }]
requires-python = ">=3.10"
dependencies = ["pydantic==2.12.5", "requests==2.32.5"]
urls = { repository = "https://github.com/gustaavv/lanraragi-api" }

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
