[project]
name = "lanraragi_api"
version = "0.9.70.2"
description = "A Python library for LANraragi API."
readme = "README.md"
authors = [{ name = "Gustav", email = "gustaavv.git@yahoo.com" }]
requires-python = ">=3.10"
dependencies = ["pydantic==2.13.0", "requests==2.33.1"]
urls = { repository = "https://github.com/gustaavv/lanraragi-api" }

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff==0.15.11",
]

[tool.ruff]
target-version = "py310"
